examples/test/testpolicy6654.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6654
  namespace: namespace71
spec:
  podSelector:
    matchLabels:
      key45: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value37
          key49: value45
      podSelector:
        matchLabels:
          key27: value45
          key34: value37
